# Poject

./: .gitattributes  .gitignore  README.md
Client/TestCSharp/: TestCSharp.sln  UpgradeLog.htm  UpgradeLog2.htm
Client/TestCSharp/TestCSharp/: TestCSharp.csproj
Client/TestCSharp/TestCSharp/Properties/: Settings.Designer.cs
Proto/: gen_cpp.bat  gen_cs.bat
Proto/proto_raw/: Msg_AI.proto  Msg_Account.proto  Msg_Battle.proto  Msg_DB.proto  Msg_Define.proto  Msg_Game.proto  Msg_ID.proto  Msg_LogicServer.proto  Msg_Login.proto  Msg_RetCode.proto  level.proto
Proto/protoc-gen-cpp/: MSG_DB.pb.cc  MSG_DB.pb.h  Msg_AI.pb.h  Msg_Battle.pb.h  Msg_Define.pb.cc  Msg_Define.pb.h  Msg_Game.pb.cc  Msg_ID.pb.h  Msg_LogicServer.pb.cc  Msg_LogicServer.pb.h  Msg_Login.pb.h  Msg_RetCode.pb.h  level.pb.cc  level.pb.h
Proto/protoc-gen-cs/: Msg_AI.cs  Msg_Battle.cs  Msg_ID.cs  Msg_RetCode.cs
Server/: CMakeLists.txt  StartServer.bat  StopServer.bat  readmine.txt
Server/AIServer/: CAIMsgHandler.cpp  CAIMsgHandler.h  CMakeLists.txt  GameService.cpp  GameService.h  Main.cpp
Server/AccountServer/: AccountManager.cpp  AccountManager.h  AccountMsgHandler.cpp  CMakeLists.txt  GameService.cpp  GameService.h  Main.cpp
Server/LoginServer/: CMakeLists.txt  GameService.cpp  GameService.h  LogicSvrManager.cpp  LogicSvrManager.h  LoginMsgHandler.cpp  Main.cpp  WebCommandHandler.cpp
Server/Message/: CMakeLists.txt  Msg_AI.pb.cc  Msg_Account.pb.cc  Msg_Account.pb.h  Msg_Battle.pb.cc  Msg_Game.pb.h  Msg_ID.pb.cc  Msg_LogicServer.pb.cc  Msg_LogicServer.pb.h  Msg_Login.pb.cc  Msg_RetCode.pb.cc  ProtoInclude.h
Server/ProxyServer/: CMakeLists.txt  GameService.cpp  GameService.h  ProxyMsgHandler.cpp  ProxyMsgHandler.h  ProxyPlayerMgr.cpp
Server/ServerData/: CMakeLists.txt  GlobalData.cpp  GlobalData.h  Include.h  RoleData.h  ServerDataInclude.h
Server/ServerEngine/: CMakeLists.txt  CommonSocket.cpp  Log.cpp
Server/ServerEngine/DBInterface/: CppMysql.cpp  DBConnection.cpp  DBRecordSet.cpp  DBStoredProc.cpp
Server/UnitTest/: CMakeLists.txt  Main.cpp
Server/UnitTest/Tests/: Include.h  Solution.h  Test_1.h  Test_10.h  Test_11.h  Test_12.h  Test_13.h  Test_14.h  Test_15.h  Test_16.h  Test_17.h  Test_18.h  Test_19.h  Test_2.h  Test_20.cpp  Test_20.h  Test_3.h  Test_4.h  Test_5.h  Test_6.h  Test_7.h  Test_8.h  Test_9.h  Test_Quaternion.h  Test_redis.h
Server/UnitTest/Type/: Define.h  MathHelper.cpp  MathHelper.h  Quaternion.cpp  Quaternion.h  Vec3.cpp  Vec3.h
zip/: db.sql  devInstall.sh  devInstall_yun.sh  版本库.txt
